<resources>
    <string name="app_name">SeeOn</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nextBTText">Далее</string>
    <string name="passwordETHintText">Пароль</string>
    <string name="passwordConfirmationETHintText">Подтверждение пароля</string>
    <string name="phoneETHintText">999 888 77 66</string>
    <string name="nameETHintText">Имя</string>
    <string name="selectDateBText">Дата рождения 📅</string>
    <string name="selectPicHint">Выбери фото</string>
    <string name="regTV1Text">Регистрация</string>
    <string name="regTV2Text">твоего аккаунта</string>
    <string name="startText1">Уникальный сервис для бронирования билетов в кинотеатрах</string>
    <string name="startText2">Удобный поиск кинотеатров в твоем городе</string>
    <string name="startText3">Комфортная оплата билетов в любое время</string>
    <string name="welcomeText">Добро пожаловать \nв SeeOn</string>
    <string name="skipText">Пропустить</string>
    <string name="helloTV">Привет,</string>
    <string name="_7">+7</string>
    <string name="LoginTV1Text">Добро пожаловать</string>
    <string name="LoginTV2Text">рады тебя видеть</string>
    <string name="closeButtonDesc">return</string>
    <string name="toRegTV1Text">Нет аккаунта?</string>
    <string name="toRegTV2Text">Зарегистрируйся</string>
    <string name="ticketsFragMainTVText">Мои билеты</string>
    <string name="backBDesc">Назад</string>
    <string name="noTicketsMSGText">Нет билетов</string>
    <string name="menoDesc">menu</string>
    <string name="accountFragMainTVText">Мой аккаунт</string>
    <string name="accountFragTVText">Личные данные</string>
    <string name="userNameTV">Имя</string>
    <string name="userPhoneNumberTV">Номер телефона</string>
    <string name="paymentMethodTV">Способ оплаты</string>
    <string name="prostoznachok">prostoznachok</string>
    <string name="regFragMainTVText">Регистрация</string>
    <string name="regFragTV2Text">твоего аккаунта</string>
    <string name="smsTV1Text">Код отправлен в SMS на номер:</string>
    <string name="smsTV2Text">+7 (000) 000-00-00</string>
    <string name="codeHintText">123456</string>
    <string name="addCardBText">Добавьте способ оплаты</string>
    <string name="cardInfoTVText">**** **** **** 0000</string>
    <string name="cvcHintText">CVC</string>
    <string name="MMggHintText">мм/гг</string>
    <string name="cardNumberHintText">0000 0000 0000 0000</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>