<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".loginfragments.PhoneNumberFragment"
    android:background="@drawable/app_background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="40dp"
        android:layout_width="335dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/indicatorLayout"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/avenirblack"
                        android:text="@string/LoginTV1Text"
                        android:textColor="@color/textColor"
                        android:textSize="24sp" />
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/rubik"
                        android:text="@string/LoginTV2Text"
                        android:layout_marginBottom="24dp"
                        android:textColor="@color/textColor"
                        android:textSize="20sp" />
                </LinearLayout>

                <ImageButton
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/closeButtonDesc"
                    android:id="@+id/returnB"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/buttonback"
                    android:src="@drawable/cross"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/indicatorLayout">

            <LinearLayout
                android:id="@+id/inputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:id="@+id/inputPhoneLayout"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="140dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/viewpadding"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="56dp"
                        android:fontFamily="@font/rubik"
                        android:gravity="end|center"
                        android:paddingEnd="5dp"
                        android:text="@string/_7"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />
                    <EditText
                        android:textColorHint="@color/fadedTextColor"
                        android:id="@+id/userPhoneNumberET"
                        style="@style/editText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints="phone"
                        android:ems="10"
                        android:hint="@string/phoneETHintText"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toRegTV1Text"
                        android:textSize="16sp"
                        android:layout_marginStart="33.5dp"
                        android:textColor="@color/textColor"
                        android:fontFamily="@font/rubik"
                        />
                    <TextView
                        android:id="@+id/toRegTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toRegTV2Text"
                        android:textSize="16sp"
                        android:textColor="@color/lightGreen"
                        android:fontFamily="@font/rubik"
                        />
                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/SHOW_PROGRESS"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nextStageB"
            app:layout_constraintStart_toStartOf="parent"
            android:indeterminateTint="@color/purple"
            android:visibility="invisible"
            android:layout_marginBottom="20dp"/>
        <Button
            android:visibility="invisible"
            android:id="@+id/nextStageB"
            android:text="@string/nextBTText"
            android:layout_width="335dp"
            android:layout_height="56dp"
            style="@style/regularButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="46dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>