
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:orientation="horizontal"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </LinearLayout>
        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/avenirblack"
                    android:text="@string/accountFragMainTVText"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:layout_marginTop="12dp"/>
                <ImageButton
                    android:id="@+id/menuButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/menubtn"
                    android:contentDescription="@string/backBDesc"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stage1Reg"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rad_gradient"
                    android:orientation="horizontal"
                    android:paddingTop="60dp"
                    android:paddingBottom="60dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="164dp"
                        android:id="@+id/userPhotoIV"
                        android:layout_height="164dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="86dp"
                        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/avenirbook"
                    android:text="@string/accountFragTVText"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    style="@style/editText"
                    android:id="@+id/userNameTV"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/userNameTV"
                    android:ems="10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/userPhoneNumberTV"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/userPhoneNumberTV"
                    android:ems="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/avenirbook"
                    android:text="@string/paymentMethodTV"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/rubik"
                            android:text="Тинькофф"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik"
                            android:text="выбери способ оплаты"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <ImageView
                        android:contentDescription="@string/prostoznachok"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:background="@drawable/dollar"
                        android:src="@drawable/dollar" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>