<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".regfragments.UserInfoFragment"
    android:background="@drawable/app_background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="40dp"
        android:layout_width="335dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/indicatorLayout"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/avenirblack"
                        android:text="@string/regTV1Text"
                        android:textColor="@color/textColor"
                        android:textSize="24sp" />
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/rubik"
                        android:text="@string/regTV2Text"
                        android:layout_marginBottom="24dp"
                        android:textColor="@color/textColor"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/firstStageBar"
                    android:background="@drawable/inactive_bar"
                    android:backgroundTint="@color/lightGreen"
                    android:layout_width="101dp"
                    android:layout_marginEnd="16dp"
                    android:layout_height="match_parent"
                    />
                <TextView
                    android:id="@+id/secondStageBar"
                    android:background="@drawable/inactive_bar"
                    android:layout_width="101dp"
                    android:layout_marginEnd="16dp"
                    android:layout_height="match_parent"
                    />

                <TextView
                    android:id="@+id/thirdStageBar"
                    android:background="@drawable/inactive_bar"
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/indicatorLayout">

            <LinearLayout
                android:layout_marginTop="40dp"
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:id="@+id/selectPicButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="28dp">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/userPhotoView"
                        android:layout_width="164dp"
                        android:layout_height="164dp"
                        android:src="@drawable/viewpadding"
                        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />
                    <TextView
                        android:layout_width="171dp"
                        android:layout_height="164dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:fontFamily="@font/rubik"
                        android:textColor="@color/textColor"
                        android:layout_gravity="center_vertical"
                        android:text="@string/selectPicHint"/>
                </LinearLayout>
                <EditText
                    android:autofillHints="name"
                    android:layout_width="335dp"
                    android:layout_height="56dp"
                    style="@style/editText"
                    android:hint="@string/nameETHintText"
                    android:id="@+id/userNameET"
                    android:inputType="textPersonName"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:id="@+id/selectBirthDateB"
                    android:text="@string/selectDateBText"
                    style="@style/editText"
                    android:layout_width="335dp"
                    android:layout_height="56dp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:indeterminateTint="@color/purple"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nextStageB"
            android:layout_marginBottom="20dp"/>
        <Button
            android:id="@+id/nextStageB"
            android:text="@string/nextBTText"
            android:layout_width="335dp"
            android:layout_height="56dp"
            style="@style/regularButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="46dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>